# esp32c3_bare_metal

./: README.md
example/: main.c  meson.build  start.S
example/driver/: meson.build  wdt.h
example/ld/: romfuncs.ld
hello_world/: cross.txt  hello_world.c  meson.build
